mejorando readme y actualizando rutas

--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,7 @@
  <main class="container">
     <header class="header">
       <figure>
-        <img src="/code/img/cozycornerlogo.svg" alt="">
+        <img src="img/cozycornerlogo.svg" alt="">
       </figure>
       <nav class="menu">
         <ul>
@@ -43,7 +43,7 @@
       <nav class="search">
         <ul>
           <li><a href="#">
-            <img src="/code/img/search.svg" alt="lupa"></a></li>
+            <img src="img/search.svg" alt="lupa"></a></li>
           <li><a href="#">Sign In</a></li>
           <li><a href="#">Sign Up</a></li>
         </ul>
@@ -53,7 +53,7 @@
     <section class="hero">
         <div class="title">
           <h1>Find your comfort working zone with Cozy Corner</h1>
-          <img src="/code/img/Rectangle.svg" alt="barra">
+          <img src="img/Rectangle.svg" alt="barra">
             <p>Change your work environment by using a co-working place, 
               to meet new people and gain a new network
             </p>
@@ -71,17 +71,17 @@
 
     <section class="informacion">
       <article>
-        <img src="/code/img/Location.svg" alt="">
+        <img src="img/Location.svg" alt="">
         <h3>20+ Location</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </article>
       <article>
-        <img src="/code/img/Room.svg" alt="">
+        <img src="img/Room.svg" alt="">
         <h3>324 Rooms Available</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </article>
       <article>
-        <img src="/code/img/wifi.svg" alt="">
+        <img src="img/wifi.svg" alt="">
         <h3>100% Internet Connected</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </article>
